--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NexMentor</title>
+    <meta name="description" content="NexMentor - Your Ultimate Mentorship Platform. Get expert guidance, coaching, and learning resources." />
+    <meta name="keywords" content="NexMentor, mentorship, learning, coaching, expert guidance" />
+    <meta name="author" content="NexMentor Team" />
+    <title>NexMentor - Expert Guidance & Learning</title>
+    <link rel="canonical" href="https://www.nexmentor.com/" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
